fix(storefront): BCTHEME-395 Wish List drop down is truncated on product page

--- a/assets/scss/components/stencil/productView/_productView.scss
+++ b/assets/scss/components/stencil/productView/_productView.scss
@@ -119,17 +119,9 @@
 
 // Details
 // -----------------------------------------------------------------------------
-//
-// 1. for Androind Chrome and IE with zoom horizontal scroll fix
-//
-// -----------------------------------------------------------------------------
 
 .productView-details {
     padding-bottom: spacing("single") + spacing("third");
-
-    &.product-options {
-        overflow: hidden; // 1
-    }
 }
 
 
